[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/09-Bomb/Boooooom (52x56).png" type="Texture" id=1]
[ext_resource path="res://Sprites/09-Bomb/Bomb On (52x56).png" type="Texture" id=2]
[ext_resource path="res://Sprites/09-Bomb/Bomb Off.png" type="Texture" id=3]
[ext_resource path="res://Script/Bomb.gd" type="Script" id=4]
[ext_resource path="res://Scene/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Script/HitBoxArea.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 104, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 156, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 260, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 104, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 156, 0, 52, 56 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "Boom",
"speed": 25.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "BombOff",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "BombOn",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="CircleShape2D" id=19]
radius = 7.07107

[sub_resource type="CircleShape2D" id=18]
radius = 25.0799

[node name="Bomb" type="KinematicBody2D"]
collision_layer = 512
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 12 )
animation = "BombOff"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 48
collision_mask = 1096

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 19 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 48
script = ExtResource( 6 )
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 18 )
disabled = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
